--- a/install
+++ b/install
@@ -16,21 +16,48 @@ function fix_dependency {
 }
 
 function backup_if_needed {
+    
     if [ -e $1 ]; then
-        if [ -z "$2" ]; then
-		    echo "Backing up old $2";
-        else
-		    echo "Backing up old file: $1";
+        if ( $NO_BACKUP ); then
+            CMD="rm $1"
+        else 
+            CMD="mv $1 $1.BACKUP"
+            if [ $2 ]; then
+		            echo "Backing up old $2";
+            else
+		            echo "Backing up old file: $1";
+            fi
         fi
 
-		mv $1 $1.BACKUP
-	fi
+		    if [ $3 ]; then
+            sudo $CMD
+        else
+            $CMD
+        fi
+	  fi
 }
 
+function remove_if_needed {
+    if [ -e $1 ]; then
+        echo "Removing: $1"
+        sudo rm -rf $1
+    fi
+}
+
+function test_link {
+  if [ $2 ]; then
+    echo $1 $2
+  fi
+}
 function create_link {
+    CMD="ln -s"
     echo "Creating link from $1 to $2"
-    if [ -n "$1$2" ]; then
-        $3 ln -s $1 $2
+    if [ $2 ]; then
+        if [ $3 ];then
+            $3 $CMD $1 $2
+        else
+            $CMD $1 $2
+        fi
     fi
 }
 
@@ -45,8 +72,8 @@ function print_done {
 function install_git {
 	echo "Installing git...";
 
-    fix_dependency git
-    backup_if_needed $HOME/.gitconfig gitconfig
+  fix_dependency git
+  backup_if_needed $HOME/.gitconfig gitconfig
 	create_link $LOCAL_PATH/git/gitconfig $HOME/.gitconfig
 }
 
@@ -54,8 +81,8 @@ function install_vim {
 
 	echo "Installing vim...";
 
-	backup_if_needed $HOME/.vimrc vimrc
-	backup_if_needed $HOME/.vim "vim folder"
+	backup_if_needed $HOME/.vimrc .vimrc
+	backup_if_needed $HOME/.vim vim
 	create_link $LOCAL_PATH/vim/vimrc $HOME/.vimrc
 	create_link $LOCAL_PATH/vim/vim $HOME/.vim
 }
@@ -65,11 +92,38 @@ function install_zsh {
   echo "Installing zsh and oh-my-zsh..."
 
   backup_if_needed $HOME/.zshrc zshrc
-  backup_if_needed $HELP/.oh-my-zsh
+  backup_if_needed $HOME/.oh-my-zsh oh-my-zsh
   create_link $LOCAL_PATH/zsh/zshrc $HOME/.zshrc
   create_link $LOCAL_PATH/zsh/oh-my-zsh $HOME/.oh-my-zsh
 }
 
+function install_xmonad_base {
+  echo "Installing xmonad base..."
+
+  remove_if_needed /usr/share/xsessions/xmonad.desktop
+  remove_if_needed /usr/local/bin/xmonad-startup
+  
+  backup_if_needed $HOME/.xmonad .xmonad
+  create_link $LOCAL_PATH/xmonad $HOME/.xmonad
+  create_link $LOCAL_PATH/xmonad/xmonad.desktop /usr/share/xsessions/xmonad.desktop true
+  create_link $LOCAL_PATH/xmonad/xmonad-startup /usr/local/bin/xmonad-startup true
+}
+
+function install_xmonad_laptop {
+  echo "Installing xmonad laptop..."
+
+  backup_if_needed $HOME/.xmobarrc .xmobarrc
+  create_link $LOCAL_PATH/xmobar/laptop $HOME/.xmobarrc
+}
+
+function install_xmonad_desktop {
+  echo "Installing xmonad desktop..."
+
+  backup_if_needed $HOME/.xmobarrc .xmobarrc
+  create_link $LOCAL_PATH/xmobar/desktop $HOME/.xmobarrc
+}
+
+NO_BACKUP=false
 HELP=false
 
 LAPTOP=false
@@ -82,7 +136,7 @@ ZSH=false
 
 ALL=false
 
-while getopts ldaxvgzh option
+while getopts ldaxvgzh! option
 do
   case "${option}"
   in
@@ -94,6 +148,7 @@ do
 		g) GIT=true;;
 		z) ZSH=true;;
 	  h) HELP=true;;
+	  !) NO_BACKUP=true;;
   esac
 done
 
@@ -104,9 +159,28 @@ if ($ALL); then
 	ZSH=true;
 fi
 
+BOLD="\033[1m"
+NORMAL="\033[0m"
 if ($HELP); then
-	echo "Options:";
-  echo "You can\'t have any help :\)"
+	echo -e "$BOLD
+Options:$NORMAL
+
+    a) Installs everything, has to be followed by one of -l or -d
+    d) Installs desktop specific stuff (xmobarrc mainly)
+    g) Intalls gitconfig
+    h) Shows this help page
+    l) Installs laptop specific stuff (xmobarrc mainly)
+    v) Installs vimrc and plugins
+    x) Installs xmonad base, has to be followed by one of -l or -d
+    z) Installs zshrc and oh-my-zsh
+    !) Skip backup of conflicting files (use with caution)
+$BOLD
+Examples:$NORMAL
+
+    ./install -vzg # Will install vim + plugins, zsh + oh-my-zsh and gitconfig
+    ./install -xlv # Will install xmonad base, xmonad laptop and vim + plugins 
+    ./install -ad  # Will install everything for desktop
+    "
 else
 
 	if ($LAPTOP && $DESKTOP); then
@@ -115,7 +189,7 @@ else
 		echo "You must install either the laptop or desktop version!";
 	else
 		if ($XMONAD); then
-			install_xmonad_common;
+			install_xmonad_base;
 			if ($LAPTOP); then
 				install_xmonad_laptop;
 			elif ($DESKTOP); then
