--- a/install
+++ b/install
@@ -1,5 +1,11 @@
 #!/bin/bash
 
+BOLD="\033[1m"
+NORMAL="\033[0m"
+RED="\033[31m"
+GREEN="\033[32m"
+YELLOW="\033[33m"
+
 LOCAL_PATH=$(pwd)
 
 function fix_dependency {
@@ -62,44 +68,42 @@ function create_link {
 }
 
 function print_start {
-   echo "Installing [$1]";
+   echo -e $GREEN"Installing "$NORMAL"["$YELLOW$1$NORMAL"]";
 }
 
 function print_done {
-   echo "Done with [$1]"; 
+   #echo "Done with [$1]!"; 
+   echo  
 }
 
 function install_git {
-	echo "Installing git...";
-
+  print_start git
   fix_dependency git
   backup_if_needed $HOME/.gitconfig gitconfig
 	create_link $LOCAL_PATH/git/gitconfig $HOME/.gitconfig
+  print_done git
 }
 
 function install_vim {
-
-	echo "Installing vim...";
-
+  print_start vim
 	backup_if_needed $HOME/.vimrc .vimrc
 	backup_if_needed $HOME/.vim vim
 	create_link $LOCAL_PATH/vim/vimrc $HOME/.vimrc
 	create_link $LOCAL_PATH/vim/vim $HOME/.vim
+  print_done vim
 }
 
 function install_zsh {
-
-  echo "Installing zsh and oh-my-zsh..."
-
+  print_start zsh
   backup_if_needed $HOME/.zshrc zshrc
   backup_if_needed $HOME/.oh-my-zsh oh-my-zsh
   create_link $LOCAL_PATH/zsh/zshrc $HOME/.zshrc
   create_link $LOCAL_PATH/zsh/oh-my-zsh $HOME/.oh-my-zsh
+  print_done zsh
 }
 
 function install_xmonad_base {
-  echo "Installing xmonad base..."
-
+  print_start xmonad
   remove_if_needed /usr/share/xsessions/xmonad.desktop
   remove_if_needed /usr/local/bin/xmonad-startup
   
@@ -107,20 +111,36 @@ function install_xmonad_base {
   create_link $LOCAL_PATH/xmonad $HOME/.xmonad
   create_link $LOCAL_PATH/xmonad/xmonad.desktop /usr/share/xsessions/xmonad.desktop true
   create_link $LOCAL_PATH/xmonad/xmonad-startup /usr/local/bin/xmonad-startup true
+  print_done xmonad
 }
 
 function install_xmonad_laptop {
-  echo "Installing xmonad laptop..."
-
+  print_start "xmobar laptop"
   backup_if_needed $HOME/.xmobarrc .xmobarrc
   create_link $LOCAL_PATH/xmobar/laptop $HOME/.xmobarrc
+  print_done "xmobar laptop"
 }
 
 function install_xmonad_desktop {
-  echo "Installing xmonad desktop..."
-
+  print_start "xmobar desktop"
   backup_if_needed $HOME/.xmobarrc .xmobarrc
   create_link $LOCAL_PATH/xmobar/desktop $HOME/.xmobarrc
+  print_done "xmobar desktop"
+}
+
+function install_xorg {
+  print_start xorg
+  print_done xorg
+}
+
+function install_irssi {
+  print_start irssi
+  print_done irssi
+}
+
+function install_yi {
+  print_start yi
+  print_done yi
 }
 
 NO_BACKUP=false
@@ -205,8 +225,6 @@ else
 		if ($ZSH); then
 			install_zsh;
 		fi
-	
-		echo "Done!"
 	fi
 fi
 
