--- a/install
+++ b/install
@@ -27,7 +27,7 @@ function backup_if_needed {
         if ( $NO_BACKUP ); then
             CMD="rm -r $1"
         else 
-            CMD="mv $1 $1.BACKUP"
+            CMD="mv $1{,.BACKUP}"
             if [ $2 ]; then
 		            echo "Backing up old $2";
             else
@@ -55,13 +55,16 @@ function test_link {
     echo $1 $2
   fi
 }
+
 function create_link {
     CMD="ln -s"
     echo "Creating link from $1 to $2"
     if [ $2 ]; then
         if [ $3 ];then
+            echo "$3 $CMD $1 $2"
             $3 $CMD $1 $2
         else
+            echo "$CMD $1 $2"
             $CMD $1 $2
         fi
     fi
@@ -87,7 +90,7 @@ function install_git {
 function install_vim {
   print_start vim
 	backup_if_needed $HOME/.vimrc .vimrc
-	backup_if_needed $HOME/.vim vim
+	backup_if_needed $HOME/.vim .vim
 	create_link $LOCAL_PATH/vim/vimrc $HOME/.vimrc
 	create_link $LOCAL_PATH/vim/vim $HOME/.vim
   print_done vim
@@ -95,8 +98,8 @@ function install_vim {
 
 function install_zsh {
   print_start zsh
-  backup_if_needed $HOME/.zshrc zshrc
-  backup_if_needed $HOME/.oh-my-zsh oh-my-zsh
+  backup_if_needed $HOME/.zshrc .zshrc
+  backup_if_needed $HOME/.oh-my-zsh .oh-my-zsh
   create_link $LOCAL_PATH/zsh/zshrc $HOME/.zshrc
   create_link $LOCAL_PATH/zsh/oh-my-zsh $HOME/.oh-my-zsh
   print_done zsh
@@ -252,6 +255,15 @@ else
     fi
     if ($YI); then
       install_yi;
+    fi
+    if ( ! $NO_BACKUP); then
+      echo "
+There is currently an issue when symlinking folders within this script.
+You might want do a:
+
+   $ git rese --hard
+
+after the installation."
     fi
 	fi
 fi
