--- a/install
+++ b/install
@@ -138,6 +138,13 @@ create_link $LOCAL_PATH/xmobar/desktop $HOME/.xmobarrc
 print_done "xmobar desktop"
 }
 
+function install_svn {
+
+  print_start svn
+  fix_dependency svn subversion
+  create_link $LOCAL_PATH/svn/plugins/svn-color/svn-color.py /usr/local/bin/svnc sudo
+}
+
 function install_xorg {
 print_start xorg
 fix_dependency urxvt rxvt-unicode-256color
@@ -191,10 +198,11 @@ ZSH=false
 XORG=false
 IRSSI=false
 YI=false
+SVN=false
 
 ALL=false
 
-while getopts ldaxvgztiyh! option
+while getopts ldaxvgzstiyh! option
 do
   case "${option}"
     in
@@ -206,6 +214,7 @@ a) ALL=true;;
 g) GIT=true;;
     z) ZSH=true;;
   t) XORG=true;;
+  s) SVN=true;;
 i) IRSSI=true;;
     y) YI=true;;
   h) HELP=true;;
@@ -218,6 +227,7 @@ if ($ALL); then
   VIM=true;
   GIT=true;
   ZSH=true;
+  SVN=true;
   XORG=true;
   IRSSI=true;
   YI=true;
@@ -233,6 +243,7 @@ if ($HELP); then
   h) Shows this help page
   i) Installs irssi config
   l) Installs laptop specific stuff (xmobarrc mainly)
+  s) Installs svn stuff
   t) Installs Xorg resources, mainly used by URxvt
   v) Installs vimrc and plugins
   x) Installs xmonad base, has to be followed by one of -l or -d
@@ -270,6 +281,9 @@ else
     if ($ZSH); then
       install_zsh;
     fi
+    if ($SVN); then
+      install_svn;
+    fi
     if ($XORG); then
       install_xorg;
     fi
@@ -279,7 +293,7 @@ else
     if ($YI); then
       install_yi;
     fi
-    if ($XMONAD || $XORG || $VIM || $GIT || $YI || $ZSH || $IRSSI); then
+    if ($XMONAD || $XORG || $VIM || $GIT || $SVN || $YI || $ZSH || $IRSSI); then
       info_message "Done!"
     else
       warning_message "Nothing was installed. Try ./install -h?"
