--- a/install
+++ b/install
@@ -174,6 +174,16 @@ create_link $LOCAL_PATH/irssi $HOME/.irssi
 print_done irssi
 }
 
+function install_qt {
+print_start "Qt Creator"
+backup_if_needed $HOME/.config/QtProject/QtCreator.ini .config/QtProject/QtCreator.ini
+backup_if_needed $HOME/.config/QtProject/qtcreator/macros .config/QtProject/qtcreator/macros
+
+create_link $LOCAL_PATH/qt/QtCreator.ini $HOME/.config/QtProject/QtCreator.ini
+create_link $LOCAL_PATH/qt/qtcreator/macros $HOME/.config/QtProject/qtcreator/macros
+print_done "Qt Creator"
+}
+
 NO_BACKUP=false
 HELP=false
 
@@ -183,10 +193,11 @@ GIT=false
 ZSH=false
 TERM=false
 IRSSI=false
+QT=false
 
 ALL=false
 
-while getopts ldaxvgzstiyh! option
+while getopts axvgztiqh! option
 do
   case "${option}"
     in
@@ -197,8 +208,9 @@ g) GIT=true;;
     z) ZSH=true;;
   t) TERM=true;;
 i) IRSSI=true;;
-  h) HELP=true;;
-!) NO_BACKUP=true;;
+  q) QT=true;;
+h) HELP=true;;
+  !) NO_BACKUP=true;;
   esac
 done
 
@@ -209,6 +221,7 @@ if ($ALL); then
   ZSH=true;
   TERM=true;
   IRSSI=true;
+  QT=true;
   install_all_base_programs;
 fi
 
@@ -217,15 +230,14 @@ if ($HELP); then
   Options:$NORMAL
 
   a) Installs everything, has to be followed by one of -l or -d
-  d) Installs desktop specific stuff (xmobarrc mainly)
   g) Intalls gitconfig
   h) Shows this help page
   i) Installs irssi config
-  l) Installs laptop specific stuff (xmobarrc mainly)
   t) Installs Xorg resources, mainly used by URxvt
   v) Installs vimrc and plugins
-  x) Installs xmonad base, has to be followed by one of -l or -d
+  x) Installs xmonad configs
   z) Installs zshrc and oh-my-zsh
+  q) Installs Qt Creator configs
   !) Skip backup of conflicting files (use with caution)
   $BOLD
   Examples:$NORMAL
@@ -253,7 +265,10 @@ else
     if ($IRSSI); then
       install_irssi;
     fi
-    if ($XMONAD || $TERM || $VIM || $GIT || $YI || $ZSH || $IRSSI); then
+	if ($QT); then
+	  install_qt;
+	fi
+    if ($XMONAD || $TERM || $VIM || $GIT || $YI || $ZSH || $IRSSI || $QT); then
       info_message "Done!"
     else
       warning_message "Nothing was installed. Try ./install -h?"
