--- a/install
+++ b/install
@@ -41,6 +41,7 @@ function install_all_base_programs {
 	fix_dependency "git";
 	fix_dependency "xmonad";
 	fix_dependency "xmobar";
+	fix_dependency "conky-all";
 	fix_dependency "dmenu";
 	fix_dependency "cmake";
 	fix_dependency "make";
@@ -124,6 +125,7 @@ function install_xmonad {
 print_start xmonad
 fix_dependency xmonad
 fix_dependency xmobar
+fix_dependency conky-all
 fix_dependency dmenu
 
 remove_if_needed /usr/share/xsessions/xmonad.desktop
@@ -135,6 +137,10 @@ create_link $LOCAL_PATH/xmonad $HOME/.xmonad
 create_link $LOCAL_PATH/xmonad/xmonad.desktop /usr/share/xsessions/xmonad.desktop sudo 
 create_link $LOCAL_PATH/xmonad/xmonad-startup /usr/local/bin/xmonad-startup sudo
 create_link $LOCAL_PATH/haskell/ghci $HOME/.ghci
+
+backup_if_needed $HOME/.conkyrc .conkyrc
+create_link $LOCAL_PATH/conky/conkyrc $HOME/.conkyrc
+
 touch $HOME/.dmenu_favourites
 
 backup_if_needed $HOME/.xmobarrc .xmobarrc
