--- a/kbdlayout/Swedish - Svdvorak.bundle/Contents/Resources/English.lproj/InfoPlist.strings
+++ b/kbdlayout/Swedish - Svdvorak.bundle/Contents/Resources/English.lproj/InfoPlist.strings
@@ -1,2 +1,3 @@
 "Swedish - Svdvorak" = "Swedish - Svdvorak";
 "Swedish - Svdvorak" = "Swedish - Svdvorak";
+"Swedish - Svdvorak" = "Swedish - Svdvorak";
