--- a/install
+++ b/install
@@ -119,6 +119,7 @@ def install_zsh(r: Recipe):
     r.create_file('.paths')
 
     r.create_link('zsh/zshrc', '.zshrc')
+    r.create_link('zsh/zfunc', '.zfunc')
     r.create_link('zsh/zsh_custom', '.zsh_custom')
     r.create_link('zsh/zsh_env', '.zsh_env')
     r.create_link('zsh/cheat_sheet', '.cheat_sheet')
